--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ align-items: center;
 
 .address-bar{
     width: 5rem;
+    text-align: center;
 }
 
 
@@ -151,6 +152,9 @@ align-items: center;
 .address-row-cont{
    height: 2rem;
    display: flex;
+   position: sticky;
+   top: 0;
+   left: 2rem;
    /* background-color: lightpink; */
 
 }
@@ -186,7 +190,16 @@ align-items: center;
     height: 2rem;
     width: 5rem;
     border: 1px solid #dfe4ea;
-    
+    outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+
+   }
+   .cell:hover{
+    border: 2px solid #7d8894;
+
    }
 
    .row-cont{
