--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ align-items: center;
    }
    .cell:hover{
     border: 2px solid #7d8894;
+    /* cursor: pointer; */
 
    }
 
@@ -206,6 +207,29 @@ align-items: center;
     display: flex;
    }
 
+   .color-prop{
+    position: relative;
+   }
+
+   .color-prop > input{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+   }
+
+   /* for hiding coller picker */
+   /* .hidden-color-picker::-webkit-color-swatch-wrapper {
+    display: none;
+}
+
+.hidden-color-picker::-webkit-color-swatch {
+    visibility: hidden;
+    display: none;
+} */
 
 
 
